k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-demo-deployment
  namespace: app-demo
  labels:
    app: app-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-demo
  template:
    metadata:
      labels:
        app: app-demo
    spec:
      containers:
        - name: app-demo
          image: nginx:latest
          ports:
            - containerPort: 80
