k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-demo-service
  namespace: app-demo
spec:
  selector:
    app: app-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
