k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-demo-ingress
  namespace: app-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: app-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-demo-service
                port:
                  number: 80
